@@ -44,8 +44,10 @@ devscripts (2.9.28) UNRELEASED; urgency=low
   * bts: list the available severities in the manpage (Closes: #412186)
   * uscan: added --force-download to force download when changelog is in sync
     with upstream version, based on a patch from Ian Wienand (Closes: #364116)
+  * debcommit: added support for specifying the list of files to commit on
+    cmdline, patch from Damyan Ivanov (Closes: #381152)
 
- -- Stefano Zacchiroli <zack@debian.org>  Sun, 25 Feb 2007 16:09:31 +0100
+ -- Stefano Zacchiroli <zack@debian.org>  Sun, 25 Feb 2007 16:17:41 +0100
 
 devscripts (2.9.27) unstable; urgency=low
 
